--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             </div>
         </div>
 
-        <div id="result">
+        <div id="result", class="results">
         </div>
 
-        <div id="scores">
-            
+        <div id="scores", class="scorediv">
+
         </div>
 
 
